--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,4 +2,4 @@
 
         <button class="join-gameroom" type="button">Player</button>
 
-        <button type="button">Spectators</button>
+        <button type="button">Spectator</button>
