added div class container

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,9 @@
-<h1>Virus Vices<h1>
+<div class="container">
 
-        <button class="join-gameroom" type="button">Player</button>
+        <h1> Virus Vices </h1>
 
-        <button type="button">Spectator</button>
+        <button class="join-gameroom" type="button"> Player </button>
+
+        <button type="button"> Spectator </button>
+
+</div>
