worked on handlbars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <h1>Virus Vices<h1>
 
-        <button class="join-gameroom" type="button">Player</button>
+        <a href="/api/gameroom"><button class="join-gameroom" type="button">Player</button></a>
 
         <button type="button">Spectator</button>
